<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tvQuizza"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:fontFamily="@font/coiny"
                android:gravity="center"
                android:text="QUIZZA"
                android:textColor="@color/white"
                android:textSize="72dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivQuizza"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@drawable/question_mark" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1.3"
            android:background="@drawable/login_button"
            android:clickable="true"
            android:fontFamily="@font/coiny"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1.3"
            android:background="@drawable/register_button"
            android:fontFamily="@font/coiny"
            android:text="@string/register_button_text"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tvCreditsLR"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="4.4"
            android:fontFamily="@font/bubbler_one"
            android:gravity="bottom|center"
            android:maxLines="10"
            android:text="@string/credits"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>